--- a/HTML5CC3/produtos.html
+++ b/HTML5CC3/produtos.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">		
 		<title>Produtos - Barbearia Alura</title>		
 		<link rel="stylesheet" href="reset.css"></link>
-		<link rel="stylesheet" href="produtos.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<header>
