--- a/HTML5CC3/index.html
+++ b/HTML5CC3/index.html
@@ -4,38 +4,79 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Barbearia Alura</title>
-		<link rel="stylesheet" type="text/css" href="style-home.css">		
+		<link rel="stylesheet" href="reset.css"></link>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	</head>
 
-	<body>
-		<head>
-			<h1 class="titulo-principal">Barbearia Alura</h1>			
-		</head>
-			
-		
-		<img id="banner" src="banner.jpg">
-		<div class="principal">
-			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+	<body>	
 
-			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+		<header>
+			<div class="caixa">
+				<h1><img src="logo.png"></h1>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contato.html">Contato</a></li>
+					</ul>
+				</nav>
+			</div>			
+		</header>
 
-			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-		</div>
+		<img class="banner" src="banner.jpg">
 
-		<div class="beneficios">
-			<h3 class="titulo-centralizado">Benefícios</h3>
+		<main>
 
-			<ul>
-				<li class="itens">Atendimento aos Clientes</li>
-				<li class="itens">Espaço diferenciado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Profissionais qualificados</li>
-			</ul>
+			<section class="principal">			
+				<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
-			<img src="beneficios.jpg" class="imagembeneficios">
-		</div>
+				<img class="utensilios" src="utensilios.jpg" alt="Utensilios de um barbeiro.">
+
+				<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+
+				<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+
+				<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+			</section>
+
+			<section class="mapa">
+				<h3 class="titulo-principal">Nosso estabelecimento</h3>				
+				<p>Nosso estabelecimento está localizado no coração da cidade.</p>
+
+				<div class="mapa-conteudo">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3645.398865381637!2d-46.29824578553185!3d-23.981688283132357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce023fc93add67%3A0xddfd6974ca51d68d!2sRua%20Maria%20M%C3%A1ximo%2C%20153%20-%20Ponta%20da%20Praia%2C%20Santos%20-%20SP%2C%2011030-101!5e0!3m2!1spt-BR!2sbr!4v1592598516895!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>		
+				</div>
+				
+			</section>
+
+			<section class="beneficios">
+				<h3 class="titulo-principal">Benefícios</h3>
+
+				<div class="conteudo-beneficios">
+					<ul class="lista-beneficios">
+						<li class="itens">Atendimento aos Clientes</li>
+						<li class="itens">Espaço diferenciado</li>
+						<li class="itens">Localização</li>
+						<li class="itens">Profissionais qualificados</li>
+						<li class="itens">Pontualidade</li>
+						<li class="itens">Limpeza</li>
+					</ul><img src="beneficios.jpg" class="imagem-beneficios">					
+				</div>
+
+				<div class="video">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+				</div>				
+
+			</section>
+
+		</main>	
+
+		<footer>
+			<img src="logo-branco.png">
+			<p class="copyrigth">&copy; Copyrigth Barbearia Alura - 2019</p>
+		</footer>		
 		
 	</body>
 
