--- a/HTML5CC3/index.html
+++ b/HTML5CC3/index.html
@@ -3,6 +3,7 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
 		<title>Barbearia Alura</title>
 		<link rel="stylesheet" href="reset.css"></link>
 		<link rel="stylesheet" type="text/css" href="style.css">
@@ -66,7 +67,7 @@
 				</div>
 
 				<div class="video">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
 				</div>				
 
 			</section>
